--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -8,7 +8,9 @@
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/containerFeedback" />
+        android:layout_above="@id/containerFeedback" >
+
+    </FrameLayout>
 
     <RelativeLayout
         android:id="@+id/containerFeedback"
@@ -17,40 +19,50 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true">
 
-        <TextView
-            android:id="@+id/iconField"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="20dp"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/messageField"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_toRightOf="@id/iconField"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:visibility="visible" />
+            android:layout_height="100dp"
+            android:orientation="horizontal"
+            android:id="@+id/linearLayout">
 
-        <TextView
-            android:id="@+id/counterField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/messageField"
-            android:layout_margin="20dp"
-            android:layout_toRightOf="@id/iconField"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:visibility="visible" />
+        <!--<TextView-->
+            <!--android:id="@+id/iconField"-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:textAlignment="center"-->
+            <!--android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
+            <!--android:visibility="visible" />-->
+
+            <TextView
+                android:id="@+id/counterField"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".30"
+                android:text="99"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/iconField"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".30"
+                android:src="@drawable/ic_launcher_background"/>
+
+            <ImageView
+                android:id="@+id/messageField"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".70"
+                android:src="@drawable/ic_launcher_background" />
+
+        </LinearLayout>
 
     </RelativeLayout>
+
 </RelativeLayout>
