--- a/app/src/main/res/layout/initial_view.xml
+++ b/app/src/main/res/layout/initial_view.xml
@@ -6,7 +6,7 @@
     android:background="@android:color/transparent">
 
     <Button
-        android:id="@+id/button_start"
+        android:id="@+id/buttonStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
